crates/test-ui/ui/autoreleasepool_not_send_sync.stderr
error[E0277]: `*mut c_void` cannot be shared between threads safely
 --> ui/autoreleasepool_not_send_sync.rs
  |
  |     needs_sync::<AutoreleasePool<'_>>();
  |                  ^^^^^^^^^^^^^^^^^^^ `*mut c_void` cannot be shared between threads safely
  |
  = help: within `AutoreleasePool<'_>`, the trait `Sync` is not implemented for `*mut c_void`
  = note: consider using `std::sync::Arc<*mut c_void>`; for more information visit <https://doc.rust-lang.org/book/ch16-03-shared-state.html>
note: required because it appears within the type `Pool`
 --> $WORKSPACE/crates/objc2/src/rc/autorelease.rs
  |
  | struct Pool {
  |        ^^^^
  = note: required because it appears within the type `&Pool`
note: required because it appears within the type `Option<&Pool>`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^
note: required because it appears within the type `AutoreleasePool<'_>`
 --> $WORKSPACE/crates/objc2/src/rc/autorelease.rs
  |
  | pub struct AutoreleasePool<'pool> {
  |            ^^^^^^^^^^^^^^^
note: required by a bound in `needs_sync`
 --> ui/autoreleasepool_not_send_sync.rs
  |
  | fn needs_sync<T: ?Sized + Sync>() {}
  |                           ^^^^ required by this bound in `needs_sync`

error[E0277]: `*mut c_void` cannot be shared between threads safely
 --> ui/autoreleasepool_not_send_sync.rs
  |
  |     needs_send::<AutoreleasePool<'_>>();
  |                  ^^^^^^^^^^^^^^^^^^^ `*mut c_void` cannot be shared between threads safely
  |
  = help: within `objc2::rc::autorelease::Pool`, the trait `Sync` is not implemented for `*mut c_void`
  = note: consider using `std::sync::Arc<*mut c_void>`; for more information visit <https://doc.rust-lang.org/book/ch16-03-shared-state.html>
note: required because it appears within the type `Pool`
 --> $WORKSPACE/crates/objc2/src/rc/autorelease.rs
  |
  | struct Pool {
  |        ^^^^
  = note: required for `&objc2::rc::autorelease::Pool` to implement `Send`
note: required because it appears within the type `Option<&Pool>`
 --> $RUST/core/src/option.rs
  |
  | pub enum Option<T> {
  |          ^^^^^^
note: required because it appears within the type `AutoreleasePool<'_>`
 --> $WORKSPACE/crates/objc2/src/rc/autorelease.rs
  |
  | pub struct AutoreleasePool<'pool> {
  |            ^^^^^^^^^^^^^^^
note: required by a bound in `needs_send`
 --> ui/autoreleasepool_not_send_sync.rs
  |
  | fn needs_send<T: ?Sized + Send>() {}
  |                           ^^^^ required by this bound in `needs_send`
